--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.css" />
     <title>week6</title>
   </head>
   <body>
+    <a title="BCIT homepage" href="https://bcit.ca">Links</a>
+    <ul>
+      <li>
+        <a title="programs" href="https://www.bcit.ca/study/">Programs</a>
+      </li>
+      <li>
+        <a title="admission" href="https://www.bcit.ca/admission">Admission</a>
+      </li>
+    </ul>
     <h2>This is a heading</h2>
     <div class="container">
       <h2>This is another heading</h2>
