--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <title>week6</title>
   </head>
   <body>
-    <a title="BCIT homepage" href="https://bcit.ca">Links</a>
-    <ul>
-      <li>
-        <a title="programs" href="https://www.bcit.ca/study/">Programs</a>
-      </li>
-      <li>
-        <a title="admission" href="https://www.bcit.ca/admission">Admission</a>
-      </li>
-    </ul>
-    <h2>This is a heading</h2>
+    <div class="container">
+      <p>My first paragraph.</p>
+      <div class="target">Target</div>
+      <p>My second paragrpah</p>
+    </div>
+
+    <!-- <p>This sentence should appear right of the image.</p>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6f/BCIT_logo.svg"
+      alt="BCIT logo"
+      width="150"
+      height="136"
+    />
+    <p class="below">This sentence should appear below the image.</p> -->
+
+
+    <!-- <h2>This is a heading</h2>
     <div class="container">
       <h2>This is another heading</h2>
       <p>This paragraph comes after the heading.</p>
@@ -32,5 +39,14 @@
         </li>
       </ul>
     </div>
+    <a title="BCIT homepage" href="https://bcit.ca">Links</a>
+    <ul>
+      <li>
+        <a title="programs" href="https://www.bcit.ca/study/">Programs</a>
+      </li>
+      <li>
+        <a title="admission" href="https://www.bcit.ca/admission">Admission</a>
+      </li>
+    </ul> -->
   </body>
 </html>
